--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-modal": "^3.13.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
